[package]
name = "rt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.91"
cooked-waker = { path = "../cooked-waker" }
crossbeam = "0.8.4"
env_logger = "0.11.5"
futures = "*"
log = { version = "^0.4.22", features = ["std"] }
pin-project-lite = "0.2.14"
simple_logger = { version = "5.0.0", features = ["threads"] }
snowflake = "1.3.0"
